<resources>
    <string name="app_name">Yom</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="person_name">PinkyUni</string>
    
    <string name="txt_recipes">Рецепты</string>
    <string name="txt_search_recipe">Подбор блюда</string>
    <string name="txt_favourite">Избранное</string>

    <string name="txt_my_recipes">Мои рецепты</string>
    <string name="txt_add_recipe">Добавить рецепт</string>

    <string name="txt_settings">Настройки</string>
    <string name="txt_about">О программе</string>

    <string name="txt_faves_empty">Здесь будет список Ваших любимых рецептов</string>
    <string name="txt_user_recipes_empty">Здесь будет список Ваших рецептов</string>

    <string name="title_cakes">Пироги и торты</string>
    <string name="napoleon">Наполеон</string>
    <string name="cake_graph_ruins">Графские развалины</string>
    <string name="cake_jelly">Желейный торт</string>
    <string name="carrot_cake">Морковный торт</string>
    <string name="chocolate_cake">Шоколадный торт с крем-сыром</string>
    <string name="carrot_pie">Морковный пирог с апельсиновым кремом</string>
    <string name="beet_chocolate_pie">Свекольно-шоколадный пирог</string>
    <string name="ginger_melissa_cake">Пирог со свежим имбирем и мелиссой</string>
    <string name="pumpkin_pie">Тыквенный пирог</string>
    <string name="chocolate_nut_pie">Шоколадно-ореховый крученый пирог</string>

    <string name="title_brownies">Пирожные</string>
    <string name="brownie">Брауни</string>
    <string name="brownie_bites">Мини брауни</string>

    <string name="title_cookies">Печенье</string>
    <string name="ginger_cookie">Имбирное печенье</string>
    <string name="traditional_ginger_cookie">Традиционное имбирное печенье</string>
    <string name="vanilla_chocolate_cookie">Шоколадно-ванильное печенье</string>
    <string name="almond_cookie">Миндальное печенье</string>
    <string name="oat_cookie">Овсяное печенье на апельсиновом соке</string>

    <string name="title_pancakes">Блины и оладьи</string>
    <string name="american_pancakes">Американские блины</string>
    <string name="pancakes_tiramisu">Блины тирамису</string>
    <string name="chocolate_banana_fritters">Шоколадно-банановые оладьи</string>
    <string name="dukan_pancakes">Блины по Дюкану</string>


    <string name="title_cheesecakes">Сырники и запеканки</string>

    <string name="title_buns">Булочки</string>

    <string name="title_waffles">Вафли</string>
    <string name="cottage_cheese_waffles">Творожные вафли</string>

    <string name="title_muffins">Маффины</string>
    <string name="blueberry_muffins_streisel">Маффины с черникой и штрейзелем</string>
    <string name="blueberry_muffins">Черничные маффины</string>
    <string name="chocolate_muffins_with_chocolate">Шоколадные маффины</string>
    <string name="apple_muffins_with_oat">Маффины с яблоком, специями и овсянкой</string>

    <string name="name">Название</string>
    <string name="calories">Калории</string>
    <string name="time">Время</string>
    <string name="txt_hour">ч</string>
    <string name="txt_min">мин</string>
    <string name="portions">Порции</string>
    <string name="txt_added_to_faves">Добавлено</string>

    <string name="title_ingredients">Ингредиенты</string>
    <string name="title_cooking">Приготовление</string>
</resources>
