<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single"
        android:id="@+id/group_1">

        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_apps_24dp"
            android:title="@string/txt_recipes" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/txt_search_recipe" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_2">

        <item
            android:id="@+id/nav_my_recipes"
            android:icon="@drawable/ic_dining_24dp"
            android:title="@string/txt_my_recipes" />

        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/txt_favourite" />

        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_24dp"
            android:title="@string/txt_add_recipe" />

    </group>
</menu>