<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/title_brownies"
            android:scaleType="centerCrop"
            android:src="@drawable/cakes_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccentLight"
            android:elevation="2dp"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:hint="@string/name"
                android:paddingStart="14dp"
                android:paddingLeft="14dp"
                android:paddingTop="8dp"
                android:paddingEnd="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="8dp"
                android:theme="@style/EditText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:inputType="textAutoCorrect"
                    android:lines="1"
                    android:maxLength="50"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingStart="14dp"
                android:paddingLeft="14dp"
                android:paddingEnd="14dp"
                android:paddingRight="14dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_time_24dp"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="14dp"
                        android:autofillHints="@string/time"
                        android:hint="3:10"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:theme="@style/EditText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_cal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_receipt_24dp"
                        android:text="@string/calories"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/cal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="14dp"
                        android:inputType="number"
                        android:hint="216"
                        android:autofillHints="@string/calories"
                        android:textAlignment="center"
                        android:digits="0123456789"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:theme="@style/EditText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_portion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_restaurant_24dp"
                        android:text="@string/portions"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/portion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="14dp"
                        android:hint="4"
                        android:autofillHints="@string/portions"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:theme="@style/EditText" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/title_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/title_ingredients"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTxtBackGrey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:theme="@style/EditText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ingredient_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:background="@drawable/round_background"
                        android:inputType="textMultiLine"
                        android:lineSpacingExtra="4dp"
                        android:minLines="5"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/title_cooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/title_cooking"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTxtBackGrey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:theme="@style/EditText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/cooking_steps_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:background="@drawable/round_background"
                        android:inputType="textMultiLine"
                        android:lineSpacingExtra="4dp"
                        android:minLines="5"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>